solve errors related to id properties for reviews - zero errors now displayed. proceeding to work on routing and visible CRUD functionality

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,7 @@ body {
 
 .container {
   background-color: gray;
+  height: 100%;
 }
 
 #main-head {
